# fnctl

./: .gitignore  Cargo.toml  Makefile  README.md  SPECIFICATION.md  package.json
cli/: Cargo.toml
cli/src/: main.rs
cli/src/application/: controller.rs  mod.rs
cli/src/authn/: controller.rs  entities.rs  mod.rs
cli/src/config/: types.rs
cli/src/function/: controlller.rs  entities.rs  generator.rs  mod.rs
cli/src/workspace/: controller.rs
examples/functions/hello/: Cargo.toml
examples/hello/: Cargo.toml
examples/hello/src/: lib.rs
src/: main.rs
src/application/: controller.rs  entities.rs
src/authn/: controller.rs
src/config/: mod.rs  types.rs
src/function/: controlller.rs  entities.rs  generator.rs  mod.rs
src/utils/: error.rs
src/workspace/: controller.rs
worker/rust/: Cargo.toml
